# gitlab-artifact-cleanup

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
gitlab_artifact_cleanup/: __init__.py  artifact_cleanup.py  cli.py  config.py  util.py
