[project]
name = "gitlab-artifact-cleanup"
description = "A tool for cleaning up gitlab artifacts"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["gitlab", "artifacts", "cleanup"]
authors = [
    {name = "Ingo Meyer", email = "i.meyer@fz-juelich.de" }
]
maintainers = [
    {name = "Ingo Meyer", email = "i.meyer@fz-juelich.de" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "python-gitlab",
    "yacl[colored_exceptions]",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/sciapp/gitlab-artifact-cleanup"

[project.scripts]
gitlab-artifact-cleanup = "gitlab_artifact_cleanup.cli:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "gitlab_artifact_cleanup._version.__version__"}
